# firstgift

./: .gitignore  .gitmodules  CMakeLists.txt
include/: td_interface.hpp
python/: convert_tgs.py  convert_tgs.sh  requirements.txt
src/: main.cpp  td_interface.cpp
